--- a/stylesheet/styleAboutUs.css
+++ b/stylesheet/styleAboutUs.css
@@ -13,21 +13,20 @@
     text-align: center;
 }
 
-.about-us-title {
-    /* font-size: xx-large; */
+/* .about-us-title {
     font-weight: bold;
     margin: 5vh;
     max-width: 100%;
     padding: 2rem;
     border-radius: 0 35rem 0 35rem;
     background-color: var(--yellow);
-}
+}*/
 
 .hortaDaRia {
     font-size: 2rem;
     color: var(--white);
     font-weight: bold;
-}
+} 
 
 .about-us-photo {
     margin: 0 auto 5vh auto;
