--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -32,6 +32,7 @@ header {
     min-width: 100%;
     max-width: 100%;
     max-height: 10vh;
+    z-index: 99;
 }
 /* NAVBAR */
 .navbar {
@@ -76,11 +77,16 @@ header {
 
 .fa-cart-shopping,
 .fa-magnifying-glass,
-.fa-bars-staggered {
+.fa-bars-staggered,
+.fa-x {
     color: var(--white);
     font-size: 1rem;
     min-height: 100%;
-    min-width: 100%;
+    width: min-content;;
+}
+
+.fa-x {
+    display: none;
 }
 
 .article-number {
@@ -95,7 +101,32 @@ header {
 /* =========================================== */
 .menu-list {
     display: none;
+    min-width: auto;
+    background-color: var(--green);
+    justify-content: center;
+    gap: 0.5rem;
+    padding: 1rem;
+    transition-property: all;
+    transition-duration: 500ms;
+    transition-timing-function: linear;
 }
+
+.menu-list li {
+    list-style: none;
+    background-color: var(--green-one);
+    min-width: 95vw;
+    text-align: center;
+    border-radius: 3rem;
+    padding: 0.3rem;
+    font-weight: 800;
+
+}
+
+.menu-list li a {
+    text-decoration: none;
+    color: var(--white);
+}
+
 
 /* SEARCH BAR */
 .searchBar-div{
@@ -107,7 +138,7 @@ header {
     margin: 12vh auto 0 auto;
     display: flex;
     align-items: center;
-    justify-content: space-evenly; 
+    justify-content: space-evenly;
     padding: 1rem;
 }
 
