--- a/stylesheet/productsList.css
+++ b/stylesheet/productsList.css
@@ -1,6 +1,6 @@
 .all-products {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     align-items: center;
     justify-content: space-around;
     /* margin: 15vh 1vw; */
@@ -9,7 +9,7 @@
 }
 
 .all-products .title-div {
-    grid-column: span 2;
+    grid-column: span 3;
 }
 
 .all-products div {
@@ -38,6 +38,6 @@
     background-color: var(--green);
     border: solid var(--orange) 1.5px;
     padding: 0.5rem;
-    font-size: 1rem;
+    /* font-size: 1rem; */
 }
 
