--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -101,14 +101,19 @@ header {
 /* =========================================== */
 .menu-list {
     display: none;
-    min-width: auto;
+    transition-property: all;
+    transition-duration: 500ms;
+    transition-timing-function: linear;
+}
+
+.show {
+    display: grid;
+    max-width: 100vw;
     background-color: var(--green);
     justify-content: center;
     gap: 0.5rem;
     padding: 1rem;
-    transition-property: all;
-    transition-duration: 500ms;
-    transition-timing-function: linear;
+    
 }
 
 .menu-list li {
