--- a/stylesheet/contacts.css
+++ b/stylesheet/contacts.css
@@ -47,3 +47,23 @@
     border-radius: 5rem;
     text-align: center;
 }
+
+@media screen and (max-width: 350px) {
+
+    .media-and-contacts {
+        grid-template-columns: repeat(1, 1fr);
+        margin: 0.5rem;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .media-and-contacts div {
+        gap: 0.1rem;
+    }
+}
+
+@media screen and (min-width: 600px) {
+
+    
+
+}
