--- a/stylesheet/styleAboutUs.css
+++ b/stylesheet/styleAboutUs.css
@@ -15,7 +15,7 @@
 
 .hortaDaRia {
     font-size: 2rem;
-    color: var(--white);
+    color: var(--black);
     font-weight: bold;
 } 
 
@@ -33,6 +33,10 @@
     display: grid;
     gap: 0.5rem;
     margin: 0 5vw;
+}
+
+.about-us-description p {
+    color: var(--black);
 }
 
 @media screen and (min-width: 700px) {
