--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -33,6 +33,7 @@ header {
     background-color: var(--green);
     min-width: 100%;
     max-width: 100vw;
+    max-height: 10svh;
     z-index: 99;
     padding: auto;
     display: grid;
@@ -43,6 +44,7 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 0.2rem 0.5rem;
+    width: 100%;
 }
 
 .logo-img-div {
@@ -135,6 +137,10 @@ header {
     padding: 0.2rem;
 }
 
+.menu-list li a:visited {
+    color: var(--white);
+    background-color: var(--green-one);
+}
 
 /* .menu-list li a:hover {
     color: var(--green-one);
@@ -169,6 +175,10 @@ header {
     background-color: var(--yellow);
     padding: 0.3rem;
     border-radius: 50%;
+}
+
+.designBy {
+    color: var(--black);
 }
 
 @media screen and (min-width: 700px) {
