--- a/stylesheet/contacts.css
+++ b/stylesheet/contacts.css
@@ -8,14 +8,14 @@
 
 .media-and-contacts {
     display: grid;
-    margin: 5vh;
     gap: 3vh;
+    padding: 1rem;
+    background-color: var(--gray);
 }
 
 .media-and-contacts div {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: space-evenly;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -31,7 +31,7 @@
 .media-and-contacts a, p {
     text-decoration: none;
     cursor: pointer;
-    color: var(--black);
+    color: var(--white);
 }
 
 .call-cost {
@@ -41,8 +41,8 @@
 }
 
 .email, .contact-number {
-    color: var(--black);
-    background-color: var(--green);
+    color: var(--white);
+    /* background-color: var(--green); */
     padding: 0.5rem;
     border-radius: 5rem;
     text-align: center;
