--- a/stylesheet/bottomMenu.css
+++ b/stylesheet/bottomMenu.css
@@ -11,6 +11,7 @@
     background-color: var(--green);
     min-width: 100vw;
     max-width: 100vw;
+    max-height: 6vh;
 }
 
 .bottom-menu div i {
