--- a/stylesheet/footer.css
+++ b/stylesheet/footer.css
@@ -1,9 +1,11 @@
 footer {
     cursor: pointer;
     text-align: end;
-    width: fit-content;
-    margin: 1rem auto 0 auto;
-
+    min-width: 100vw;
+    min-height: fit-content;
+    margin: 0 auto 6vh auto;
+    outline: 0;
+    border: 0;
 }
 
 footer a {
@@ -14,9 +16,13 @@ footer a {
     color: var(--orange);
     background-color: var(--white);
     padding: 0.5rem;
-    border-radius: 2rem;
     font-weight: 800;
     font-size: small;
+    background-color: var(--gray);
+}
+
+.designBy {
+    color: var(--white);
 }
 
 @media screen and (max-width: 350px) {
