--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -31,6 +31,7 @@
     color: var(--black);
     display: grid;
     justify-content: center;
+    align-items: center;
     min-height: 100%;
     min-width: 100%;
     gap: 0.5rem;
