--- a/stylesheet/form.css
+++ b/stylesheet/form.css
@@ -1,6 +1,7 @@
 .contactForm {
-    margin: 15dvh 1rem 5dvh 1rem;
+    margin: 15dvh 3rem 5dvh 3rem;
     display: grid;
+    justify-content: center;
     gap: 2rem;
     border: solid var(--green) 0.2rem;
     padding: 1rem;
@@ -14,7 +15,8 @@
 }
 
 .contactForm div input {
-    min-width: 60vw;
+    margin-left: 1rem;
+    min-width: 25vw;
     border-radius: 0.3rem;
     border-color: var(--green);
     outline: none;
@@ -30,7 +32,7 @@
 }
 
 .contactForm div textarea {
-    min-width: 60vw;
+    min-width: 40vw;
     border-radius: 0.3rem;
     border-color: var(--green);
     padding: 0.4rem;
