--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -154,19 +154,16 @@
 
 .title-div {
     font-weight: bold;
-    margin: 5vh;
+    margin: 5vh 0;
     max-width: 100%;
-    padding: 2rem;
-    border-radius: 0 35rem 0 35rem;
+    padding: 3vh;
+    /* border-radius: 0 35rem 0 35rem; */
     background-color: var(--yellow);
     text-align: center;
 }
 
 @media screen and (max-width: 350px) {
 
-    .title-div {
-        border-radius: 0 5rem 0 5rem;
-    }
 
 }
 
