--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -11,22 +11,21 @@
 .sabaoNatural,
 .plantasEmVaso {
     display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(1, 1fr);
+    gap: 0.5rem;
+    grid-template-columns: repeat(2, 1fr);
     max-width: 100vw;
-    margin: 7rem auto;
+    margin: 7rem 2vw;
     justify-content: center;
 }
 
 .boxItem {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    padding: 1rem;
+    padding: 0.5rem;
     justify-content: center;
-    max-width: 70%;
-    max-height: fit-content;
+    max-height: min-content;
     margin: 0 auto;
-    gap: 1rem;
+    gap: 0.5rem;
     align-items: center;
     font-size: 1rem;
     font-weight: 700;
@@ -45,13 +44,17 @@
     border-radius: 5%;
     font-size: 0.8rem;
     letter-spacing: 0.1rem;
+    min-height: 2.6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .boxItem img {
     grid-column: span 2;
     object-fit: contain;
-    max-width: 100%;
-    margin: 0 auto;
+    max-width: 90%;
+    margin: auto;
     border-radius: 1rem;
     /* opacity: 0.6; */
     transition: 1s;
