update style of cabaz-um page onclick

--- a/stylesheet/form.css
+++ b/stylesheet/form.css
@@ -1,5 +1,5 @@
 .contactForm {
-    margin: 15dvh auto 5dvh auto;
+    margin: 15dvh 3vw 5dvh 3vw;
     display: grid;
     justify-content: center;
     gap: 2rem;
