--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -7,6 +7,7 @@
     display: grid;
     justify-content: center;
     /* border: solid red 1px; */
+    max-width: 100vw;
 }
 
 .cabaz-name-title {
@@ -28,7 +29,9 @@
     justify-content: space-between;
     gap: 5vw;
     padding: 0.5rem;
-    /* border: solid red 1px; */
+    border: solid var(--green-one) 0.2rem;
+    margin: 0 5vw;
+    border-radius: 5%;
 }
 
 .cabaz-list {
@@ -49,6 +52,8 @@
     padding: 0.4rem;
     grid-column-start: 2;
     margin: 0 auto;
+    grid-column: span 2;
+    cursor: pointer;
 }
 
 .cabaz-item {
@@ -58,26 +63,55 @@
 
 .cabaz-content img, .sugestionsContent div img {
     max-width: 40vw;
+    object-fit: cover;
 }
 
 .sugestions {
     margin: 5rem auto;
-    overflow-x: hidden;
-   
+    max-width: 100vw;
+    display: grid;
+    gap: 5vh;
+    padding-left: 2vw;
+    /* overflow: scroll;  */
 }
  
 .sugestionsContent {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    overflow-x: hidden;
-    gap: 1.5rem;
+    overflow-x: scroll;
+    gap: 10vw;
+    padding: 2vw;
+}
+
+.sugestionsContent::-webkit-scrollbar,
+.sugestionsContent::-webkit-scrollbar-track,
+.sugestionsContent::-webkit-scrollbar-thumb {
+    display: none;
 }
 
 .sugestion {
     border: solid var(--green-one) 0.2rem;
     padding: 1rem;
     border-radius: 0.5rem;
+    display: grid;
+    align-items: center;
+    
 }
+
+.sugestion a {
+    color: var(--black);
+    text-decoration: none;
+    font-weight: 800;
+}
+
+.sugestion a span {
+    border: solid var(--green-one) 0.2rem;
+    text-align: center;
+}
+/* 
+.sugestion:hover {
+    transform: scale(1.1);
+} */
 
 /* home page stylesheet */
 
