--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -2,7 +2,7 @@
 
 /* Cabaz Um */
 
-.cabaz-um {
+.cabaz-um, .cabaz-dois, .cabaz-tres {
     margin: 5rem auto 0 auto;
     display: grid;
     justify-content: center;
