--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -11,7 +11,7 @@
 .sabaoNatural,
 .plantasEmVaso {
     display: grid;
-    gap: 0.5rem;
+    gap: 1vw;
     grid-template-columns: repeat(2, 1fr);
     max-width: 100vw;
     margin: 7rem 2vw;
@@ -86,5 +86,7 @@
     padding: 0.5rem;
     color: var(--white);
     font-weight: 600;
-    border: 2px var(--orange) solid;
+    letter-spacing: 0.1rem;
+    outline: none;
+    border: none;
 }
