--- a/stylesheet/form.css
+++ b/stylesheet/form.css
@@ -10,12 +10,12 @@
 
 .contactForm div:not(.introduction, .clientMessage) {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
 .contactForm div input {
-    margin-left: 1rem;
+    /* margin-left: 1rem; */
     min-width: 25vw;
     border-radius: 0.3rem;
     border-color: var(--green);
@@ -36,12 +36,13 @@
     border-radius: 0.3rem;
     border-color: var(--green);
     padding: 0.4rem;
+    margin: 0;
 }
 
 .clientMessage {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
+    display: grid;
+    align-items: center;
+    gap: 1rem;
 }
 
 .introduction .introductionText {
@@ -63,5 +64,16 @@
 }
 
 .border {
+    border: solid red 2px;
+}
+
+.googleMapsLocation {
+    max-width: 100vw;
+    margin: 5vh auto;
+}
+
+.googleMapsLocation iframe{
+    width: 100%;
+    height: 100%;
     border: solid red 2px;
 }
