--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -37,11 +37,11 @@
     /* border: solid red 2px; */
     margin: 0 auto;
     text-transform: uppercase;
-    background-color: var(--green);
-    color: var(--white);
+    background-color: var(--yellow);
+    color: var(--black);
     grid-column: span 2;
     padding: 0.4rem;
-    border-radius: 5%;
+    border-radius: 0.5rem;
     font-size: 0.8rem;
     letter-spacing: 0.1rem;
     min-height: 2.6rem;
@@ -81,11 +81,11 @@
 }
 
 .boxItem button {
-    background-color: var(--green);
+    background-color: var(--black);
     border-radius: 1rem;
     padding: 0.5rem;
     color: var(--white);
-    font-weight: 600;
+    font-weight: 700;
     letter-spacing: 0.1rem;
     outline: none;
     border: none;
