--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -200,19 +200,29 @@
 
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 700px) {
+
+    .title-div {
+        font-weight: bold;
+        margin: 5vh 0;
+        max-width: 100%;
+        padding: 3vh;
+        /* border-radius: 0 35rem 0 35rem; */
+        background-color: var(--white);
+        text-align: center;
+    }
+
+    .hortaDaRia {
+        font-size: 2rem;
+        color: var(--black);
+        background-color: var(--white);
+        font-weight: bold;
+        border-radius: 0;
+    } 
 
     .cabaz-menu {
         grid-template-columns: repeat(4, 1fr);
         gap: 0.5rem;
-    }
-
-    .title-div {
-        background-color: var(--green-one);
-        /* border: solid red 2px; */
-        font-size: 2rem;
-        color: var(--black);
-
     }
 
 }
