--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -24,7 +24,7 @@
     padding: 0.5rem;
     justify-content: center;
     max-height: min-content;
-    margin: 0 auto;
+    margin: 0 0.1rem;
     gap: 0.5rem;
     align-items: center;
     font-size: 1rem;
